# openai_chatbot

./: Cargo.toml  README.md
src/: chatbot.rs  main.rs
