[package]
name = "sleepscore_chatbot"
version = "0.1.0"
edition = "2021"
description = "Chatbot integrating SleepScore API with openAI API"

[dependencies]

#loads environment OPENAI API KEY from the .env file
dotenv = "0.15"

#high-level HTTP client library
reqwest = { version = "0.11", features = ["json"] }

#framework for serializing and deserializing Rust data structures
serde = { version = "1.0", features = ["derive"] }

#specific framework to work with json files
serde_json = "1.0"

#asynchronous runtime for Rust
tokio = { version = "1", features = ["full"] }